--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/mainui.css"></script>
   <script type="text/javascript">
     $(document).ready(function(){
-    	initialize();
+		initialize();      
     });
   </script>
   <!-- This is the template for the items in the main grid view-->
@@ -117,13 +117,11 @@
       </div>
       <div class="personalNavItems">
       	<div id="btnPost" class="navItem postButton">Post</div>
-        <div class="userInfo"><div class="userGreeting"></div><input id="btnShowLogin" type="button" value="login"/></div>
-    	  <!--
-        <a href="twitter_signin"><img src="images/twitter_signin.png"/></a>
-          <div id="btnNotifications" class="navItem notificationsButton">Notifications</div>
-    	    <div id="btnAbout" class="navItem aboutButton">About</div>
-        -->
-
+        <div class="userInfo">
+        	<div class="userGreeting"></div>
+       		<input id="btnShowLogin" type="button" value="login"/>
+			<button id="signinButton">Sign in with Google</button>
+       	</div>
       </div>
     </div>
 
