--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,7 +7,17 @@
 	<link rel="stylesheet" type="text/css" href="css/mainui.css"></script>
   <script type="text/javascript">
     $(document).ready(function(){
-		initialize();      
+		initialize(); 
+		var time = new Date().getTime();
+     $(document.body).bind("mousemove keypress", function(e) {
+         time = new Date().getTime();
+     });
+
+     function refresh() {
+             window.location.reload(true);
+     }
+
+     setTimeout(refresh, 3000);     
     });
   </script>
   <!-- This is the template for the items in the main grid view-->
