--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,16 +8,13 @@
   <script type="text/javascript">
     $(document).ready(function(){
 		initialize(); 
-		var time = new Date().getTime();
-     $(document.body).bind("mousemove keypress", function(e) {
-         time = new Date().getTime();
-     });
 
+	/*
      function refresh() {
              window.location.reload(true);
      }
 
-     setTimeout(refresh, 3000);     
+     setTimeout(refresh, 3000);*/     
     });
   </script>
   <!-- This is the template for the items in the main grid view-->
