--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -113,10 +113,12 @@
       <div class="mainNavItems">
       	<div id="btnCategorizeUs" class="navItem categorizeUsButton">categorize.us</div>
         <input id="txtTagSearch" class="tagText" type="text" placeholder="Tags to Search or Click Tag to Change Mode" width=200/>
+      	<span id="tagShortcut" class="taggingStuff unseen">[1]</span>
       	<div id="btnSearch" class="navItem searchButton">Search</div>
-      	<div id="btnTag" class="navItem tagButton">Tag Mode</div>
       	<div id="btnPlay" class="navItem playButton">&nbsp;</div>
-
+      	<div id="btnTag" class="navItem tagButton">Tag Mode</div>
+      	<div id="btnAddTag" class="navItem addTagButton taggingStuff unseen">&nbsp;</div>
+		<span id="tagPresets" class="taggingStuff unseen"></span>
       </div>
       <div class="personalNavItems">
       	<div id="btnPost" class="navItem postButton">Post</div>
@@ -154,6 +156,7 @@
       	edit by abhishek rana <br/>
       	play by hayatstudio10 <br/>
       	Stop by Jake Dunham <br/>
+      	Plus by creative outlet <br/>
       </div>
     </div>
   </body>
