add settings panel and batch, rate limit UI updates in play mode

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -106,6 +106,15 @@
 			<input type="button" class="closeButton" value="close"/>
 		</div>
 	</script>
+	<script id="tmplSettings" type="text/x-handlebars-template">
+		<div class="settings">
+			<p>Poll Rate <input class="txtPollRate" type="text" value="{{pollRate}}"/></p>
+			<p>Update Batch Size<input class="txtUpdateBatchSize" type="text" value="{{updateBatchSize}}"/></p>
+			<p>UI Update Rate<input class="txtUpdateRate" type="text" value="{{uiUpdateRate}}"/></p>
+			<input type="button" class="btnSaveSettings" value="save"/>
+			<input type="button" class="closeButton" value="close"/>
+		</div>
+	</script>
   </head>
   <body>
     <!-- The menu bar at the top of the screen -->
