--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,13 +2,14 @@
   <head>
 	<script src="scripts/jquery-3.3.1.min.js"></script>
 	<script type="text/javascript" src="scripts/handlebars-v4.0.12.js"></script>
+  <script type="text/javascript" src="scripts/async.js"></script>
 	<script type="text/javascript" src="scripts/categorizeus.js"></script>
 	<script type="text/javascript" src="scripts/mousetrap.min.js"></script>
 	<script type="text/javascript" src="scripts/mainui.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/mainui.css"></script>
   <script type="text/javascript">
     $(document).ready(function(){
-		    initialize();      
+		    initialize();
     });
   </script>
   <!-- This is the template for the items in the main grid view-->
