factor out complicated query stuff to ui.js for reuse

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,6 +7,8 @@
 	<script type="text/javascript" src="scripts/mousetrap.min.js"></script>
 	<script type="text/javascript" src="scripts/mainui.js"></script>
   <script type="text/javascript" src="scripts/ui.js"></script>
+  <script type="text/javascript" src="scripts/util.js"></script>
+
 	<link rel="stylesheet" type="text/css" href="css/mainui.css"></script>
   <script type="text/javascript">
     $(document).ready(function(){
