move grid, start on simplified alternative ui

--- a/src/main/resources/static/grid/index.html
+++ b/src/main/resources/static/grid/index.html
@@ -5,7 +5,7 @@
   <script type="text/javascript" src="/scripts/async.js"></script>
 	<script type="text/javascript" src="/scripts/categorizeus.js"></script>
 	<script type="text/javascript" src="/scripts/mousetrap.min.js"></script>
-	<script type="text/javascript" src="/scripts/simpleui.js"></script>
+	<script type="text/javascript" src="/scripts/mainui.js"></script>
   <script type="text/javascript" src="/scripts/ui.js"></script>
   <script type="text/javascript" src="/scripts/util.js"></script>
 
